jinfer: tool calls in TurnTemplate (encode side), LFM2.5 byte-exact + cached
The detector (decode) was model-owned; encoding tool requests still fell to the
whole-render ChatFormat path, so tool conversations got no turn-stable framing
and no prompt-cache reuse. This lands the encode side for LFM2.5, behind a
supportsTools() gate so every other model is unchanged.

Contract (jinfer-llm chat/):
  - TurnTemplate.Preamble(Optional<Message> system, List<Tool> tools): the
    conversation-scoped, turn-stable inputs the preamble is built from.
  - TurnTemplate.conversationStart(Preamble): bos + the model's system/tool
    framing, REPLACING conversationStart() and the leading system turn. Default
    ignores tools; supportsTools() models override. supportsTools() default false.
  - Tool gains rawJson: the whole tool object verbatim. Templates that embed the
    tool via Jinja tojson need this - re-serializing decomposed fields would not
    preserve key order/spacing and would break byte-exactness.
  - Part.ToolCall preserves argument insertion order (Map.copyOf does not); the
    order is load-bearing for the pythonic render.
  - ToolCallSyntax gains renderPythonic (inverse of its parser) and jinjaJson (a
    tojson-compatible serializer: ", "/": " separators, insertion order, JSON
    booleans) - the canonical form the server uses for rawJson.

LFM2 encoder (from the GGUF's actual template):
  - tools weld into the system turn: `List of tools: [{tool json}, ...]`, merged
    with any system message;
  - assistant tool-call turns append `<|tool_call_start|>[name(k='v', ...)]
    <|tool_call_end|>` - the pythonic form, mirror of the detector;
  - tool results are a plain `tool` turn.

Server: toConversation now accepts tool-role and assistant.tool_calls messages
(building Part.ToolCall/Role.TOOL); buildTools canonicalizes each request tool to
jinjaJson; chat() routes tool requests to the TurnTemplate path when the template
supportsTools() and the request does not FORCE a 